<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Things2Do</string>
    <string name="title_activity_main">Login</string>
    <string name="login_title">Login</string>
    <string name="user_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="email_title">Email:</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="task_name">Task:</string>
    <string name="task_hint">Name of Task</string>
    <string name="date_title">Date:</string>
    <string name="date_hint">Date to Complete</string>
    <string name="time_title">Estimated Hours:</string>
    <string name="time_hint">Number of Hours</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="no_data">No Saved Task!</string>

</resources>
