<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jtilley.things2do.AddItemActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/task_name" />

    <EditText
        android:id="@+id/taskNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taskName"
        android:layout_below="@+id/taskName"
        android:ems="10"
        android:hint="@string/task_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taskNameInput"
        android:layout_below="@+id/taskNameInput"
        android:layout_marginTop="30dp"
        android:text="@string/date_title" />

	<EditText
	    android:id="@+id/dateInput"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/dateTitle"
	    android:layout_below="@+id/dateTitle"
	    android:ems="10"
	    android:hint="@string/date_hint"
	    android:inputType="date" />
    
    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dateInput"
        android:layout_below="@+id/dateInput"
        android:layout_marginTop="30dp"
        android:text="@string/time_title" />

    <EditText
        android:id="@+id/timeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeTitle"
        android:layout_below="@+id/timeTitle"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="number" />

</RelativeLayout>
